profile set in header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
         .position{
             position: relative;
             left: 56%;
+            top: 12px;
         }
+
+
+        .profile{
+            width: 63px;
+            height: 63px;
+
+            border-radius: 100%;
+            border: 5px solid darkblue;
+            margin: 0;
+            padding: 0;
+
+            position: relative;
+            top: -12px;
+            left: 275px;
+        }
+
     </style>
 </head>
 <body>
@@ -30,12 +47,13 @@
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <div class="navbar-nav position">
+                        <div class="navbar-nav position ">
                             <a class="nav-link active" aria-current="page" href="#">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="#">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="#">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="#">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                             <a class="nav-link active" href="#">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
                         </div>
                     </div>
                 </div>
