--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
 
             background-color: #3A0044;
         }
+
+        section>footer>div>h1{
+            position: relative;
+            top: 15px;
+            text-align: center;
+            font-size: 48px;
+
+            -webkit-text-fill-color: white;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +81,9 @@
         </header>
 
         <footer>
-            <div id="footer"></div>
+            <div id="footer">
+                 <h1>About Us</h1>
+            </div>
         </footer>
     </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
