moreLink , PrimaryMenu , ContactUs css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             bottom: 0;
 
             width: 100vw;
-            height: 45vh;
+            height: 58vh;
 
             background-color: #3A0044;
         }
@@ -51,6 +51,50 @@
             font-size: 48px;
 
             -webkit-text-fill-color: white;
+        }
+
+        section>footer>div>h4{
+            font-size: 18px;
+            -webkit-text-fill-color: white;
+            width: 150px;
+            position: relative;
+        }
+
+        #moreLink{
+            top: 61px;
+            left: 11%;
+        }
+
+        #primaryMenu{
+            top: 31px;
+            left: 45.5%;
+        }
+
+        #contactUs{
+            top: 3px;
+            left: 82.0%;
+        }
+
+        .h2Footer{
+            width: 200px;
+            -webkit-text-fill-color: white;
+            font-size: 12px;
+            position: relative;
+        }
+
+        #moreLinkContent{
+            left: 11%;
+            top: 3%;
+        }
+
+        #primaryMenuContent{
+            left: 45.5%;
+            top: -7%;
+        }
+
+        #contactUsContent{
+            left: 82.0%;
+            top: -29.5%;
         }
     </style>
 </head>
@@ -83,6 +127,12 @@
         <footer>
             <div id="footer">
                  <h1>About Us</h1>
+                 <h4 id="moreLink">More Link</h4>
+                 <h4 id="primaryMenu"> Primary Menu</h4>
+                 <h4 id="contactUs">Contact Us</h4>
+                 <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
+                 <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
+                 <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
             </div>
         </footer>
     </section>
