social media css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             top: 12px;
         }
 
-
         .profile{
             width: 63px;
             height: 63px;
@@ -54,7 +53,7 @@
         }
 
         section>footer>div>h4{
-            font-size: 18px;
+            font-size: 23px;
             -webkit-text-fill-color: white;
             width: 150px;
             position: relative;
@@ -76,9 +75,9 @@
         }
 
         .h2Footer{
-            width: 200px;
+            width: 240px;
             -webkit-text-fill-color: white;
-            font-size: 12px;
+            font-size: 14px;
             position: relative;
         }
 
@@ -95,6 +94,55 @@
         #contactUsContent{
             left: 82.0%;
             top: -29.5%;
+        }
+
+        section>footer>div:nth-child(2){
+            position: absolute;
+            bottom: 0;
+            width: 100vw;
+
+            -webkit-text-fill-color: white;
+            text-align: center;
+        }
+
+        #h6Footer{
+            font-size: 11px;
+        }
+
+        #groStore{
+            -webkit-text-fill-color: white;
+            position: absolute;
+            right: 115px;
+            top: -28px;
+        }
+
+        #socialMediaFooter{
+            position: absolute;
+            left: 105px;
+            top: -42px;
+        }
+
+        #facebook{
+            width: 55px;
+            aspect-ratio: 1/1;
+
+            position: relative;
+        }
+
+        #instagram{
+            width: 40px;
+            aspect-ratio: 1/1;
+
+            position: relative;
+            left: 10px;
+        }
+
+        #whatsapp{
+            width: 39px;
+            aspect-ratio: 1/1;
+
+            position: relative;
+            left: 28px;
         }
     </style>
 </head>
@@ -133,6 +181,16 @@
                  <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
                  <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
                  <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
+            </div>
+
+            <div>
+                <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>
+                <h2 id="groStore">GroStore</h2>
+                <div id="socialMediaFooter">
+                    <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
+                    <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
+                    <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
+                </div>
             </div>
         </footer>
     </section>
