--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             background-color: #3A0044;
         }
 
-        section>footer>div>h1{
+        section>footer>div>div>h1{
             position: relative;
             top: 15px;
             text-align: center;
@@ -52,7 +52,7 @@
             -webkit-text-fill-color: white;
         }
 
-        section>footer>div>h4{
+        section>footer>div>div>h4{
             font-size: 23px;
             -webkit-text-fill-color: white;
             width: 150px;
@@ -65,12 +65,12 @@
         }
 
         #primaryMenu{
-            top: 31px;
+            top: 25px;
             left: 45.5%;
         }
 
         #contactUs{
-            top: 3px;
+            top: -11px;
             left: 82.0%;
         }
 
@@ -88,15 +88,15 @@
 
         #primaryMenuContent{
             left: 45.5%;
-            top: -7%;
+            top: -10%;
         }
 
         #contactUsContent{
             left: 82.0%;
-            top: -29.5%;
+            top: -40.5%;
         }
 
-        section>footer>div:nth-child(2){
+        section>footer>div>div:nth-child(2){
             position: absolute;
             bottom: 0;
             width: 100vw;
@@ -144,6 +144,10 @@
             position: relative;
             left: 28px;
         }
+
+        #mainDiv{
+            padding: 0;
+        }
     </style>
 </head>
 <body>
@@ -173,23 +177,25 @@
         </header>
 
         <footer>
-            <div id="footer">
-                 <h1>About Us</h1>
-                 <h4 id="moreLink">More Link</h4>
-                 <h4 id="primaryMenu"> Primary Menu</h4>
-                 <h4 id="contactUs">Contact Us</h4>
-                 <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
-                 <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
-                 <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
-            </div>
+            <div id="mainDiv" class="container-fluid">
+                <div id="footer">
+                     <h1>About Us</h1>
+                     <h4 id="moreLink">More Link</h4>
+                     <h4 id="primaryMenu"> Primary Menu</h4>
+                     <h4 id="contactUs">Contact Us</h4>
+                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
+                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
+                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
+                </div>
 
-            <div>
-                <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>
-                <h2 id="groStore">GroStore</h2>
-                <div id="socialMediaFooter">
-                    <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
-                    <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
-                    <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
+                <div>
+                    <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>
+                    <h2 id="groStore">GroStore</h2>
+                    <div id="socialMediaFooter">
+                        <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
+                        <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
+                        <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
+                    </div>
                 </div>
             </div>
         </footer>
