--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         #footer{
-            position: absolute;
+            position: relative;
             bottom: 0;
 
             width: 100vw;
@@ -148,6 +148,54 @@
         #mainDiv{
             padding: 0;
         }
+
+        #footerMain{
+           position: absolute;
+            bottom: 0;
+        }
+
+        #totalIncome{
+            position: absolute;
+            left: 39%;
+        }
+
+        #totalOrder{
+            position: absolute;
+            left: 9%;
+        }
+
+        #totalCustomer{
+            position: absolute;
+            left: 70%;
+        }
+
+        .cards{
+            top: 28%;
+            background-color: white;
+            -webkit-text-fill-color: purple;
+            font-weight: bold;
+            border: 0 solid white;
+            height: 150px;
+            font-size: 30px;
+            text-align: center;
+        }
+
+        .cardTitle{
+            position: relative;
+            top: 20px;
+        }
+
+        section>section{
+            display: flex;
+        }
+
+        @media all and (max-width: 800px) {
+            #cardSection{
+                height: 300px;
+                justify-content: space-around;
+                display: block;
+            }
+        }
     </style>
 </head>
 <body>
@@ -175,31 +223,58 @@
                 </nav>
             </nav>
         </header>
+    </section>
 
-        <footer>
-            <div id="mainDiv" class="container-fluid">
-                <div id="footer">
-                     <h1>About Us</h1>
-                     <h4 id="moreLink">More Link</h4>
-                     <h4 id="primaryMenu"> Primary Menu</h4>
-                     <h4 id="contactUs">Contact Us</h4>
-                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
-                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
-                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
-                </div>
-
-                <div>
-                    <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>
-                    <h2 id="groStore">GroStore</h2>
-                    <div id="socialMediaFooter">
-                        <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
-                        <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
-                        <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
-                    </div>
+    <section id="cardSection">
+        <div>
+            <div id="totalOrder" class="shadow card container-fluid cards" style="max-width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-center ">00</h5>
+                    <p class="card-text cardTitle">Total Order</p>
                 </div>
             </div>
-        </footer>
+
+            <div id="totalIncome" class="shadow card container-fluid cards" style="max-width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-center ">00.0</h5>
+                    <p class="card-text cardTitle">Total Income</p>
+                </div>
+            </div>
+
+            <div id="totalCustomer" class="shadow card container-fluid cards" style="max-width: 18rem;">
+                <div class="card-body">
+                        <h5 class="card-title text-center">00</h5>
+                    <p class="card-text cardTitle">Total Customers</p>
+                </div>
+            </div>
+        </div>
     </section>
+
+<!--    <section>-->
+<!--        <footer id="footerMain">-->
+<!--            <div id="mainDiv" class="container-fluid">-->
+<!--                <div id="footer">-->
+<!--                     <h1>About Us</h1>-->
+<!--                     <h4 id="moreLink">More Link</h4>-->
+<!--                     <h4 id="primaryMenu"> Primary Menu</h4>-->
+<!--                     <h4 id="contactUs">Contact Us</h4>-->
+<!--                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>-->
+<!--                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>-->
+<!--                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>-->
+<!--                </div>-->
+
+<!--                <div>-->
+<!--                    <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>-->
+<!--                    <h2 id="groStore">GroStore</h2>-->
+<!--                    <div id="socialMediaFooter">-->
+<!--                        <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">-->
+<!--                        <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">-->
+<!--                        <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </footer>-->
+<!--    </section>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
