--- a/index.html
+++ b/index.html
@@ -189,16 +189,36 @@
             display: flex;
         }
 
-        @media all and (max-width: 800px) {
-            #cardSection{
-                height: 300px;
-                justify-content: space-around;
-                display: block;
-            }
+        #searchBar{
+            width: 82.2vw;
+            height: 50px;
+
+            position: absolute;
+            left: 122px;
+            top: 60%;
+        }
+
+        #searchInputField{
+            border-radius: 200px 0 0 200px;
+        }
+
+        .searchBtn{
+            border-radius: 200px;
+            width: 150px;
+            background-color: purple;
+            -webkit-text-fill-color: white;
+            border: 0;
+        }
+
+        #order{
+            position: absolute;
+            top: 77%;
+            left: 9%;
         }
     </style>
 </head>
 <body>
+<main>
     <section>
         <header>
             <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded" style="background-color: #ffffff;">
@@ -248,6 +268,17 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <div id="searchBar" class="input-group mb-3">
+                <input id="searchInputField" type="text" class="form-control" placeholder="Search Order" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+            </div>
+        </div>
+
+        <div id="order">
+            <h4>View Orders</h4>
+        </div>
     </section>
 
 <!--    <section>-->
@@ -276,5 +307,6 @@
 <!--        </footer>-->
 <!--    </section>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</main>
 </body>
 </html>
