--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
 
         #footer{
-            position: relative;
-            bottom: 0;
+            position: absolute;
+            top: 100vh;
 
             width: 100vw;
             height: 58vh;
@@ -71,7 +71,7 @@
 
         #contactUs{
             top: -11px;
-            left: 82.0%;
+            left: 78%;
         }
 
         .h2Footer{
@@ -92,7 +92,7 @@
         }
 
         #contactUsContent{
-            left: 82.0%;
+            left: 78%;
             top: -40.5%;
         }
 
@@ -107,19 +107,24 @@
 
         #h6Footer{
             font-size: 11px;
+            position: relative;
+            bottom: 20px;
+            width: 100vw;
+            text-align: center;
+            -webkit-text-fill-color: white;
         }
 
         #groStore{
             -webkit-text-fill-color: white;
             position: absolute;
-            right: 115px;
-            top: -28px;
+            right: 150px;
+            top: 288px;
         }
 
         #socialMediaFooter{
             position: absolute;
             left: 105px;
-            top: -42px;
+            top: 278px;
         }
 
         #facebook{
@@ -305,49 +310,55 @@
                     <td>Mark</td>
                     <td>Otto</td>
                     <td>@mdo</td>
+                    <td>@mdo</td>
+                    <td>@mdo</td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>Jacob</td>
                     <td>Thornton</td>
                     <td>@fat</td>
+                    <td>@fat</td>
+                    <td>@fat</td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td colspan="2">Larry the Bird</td>
                     <td>@twitter</td>
+                    <td>@twitter</td>
+                    <td>@twitter</td>
                 </tr>
                 </tbody>
             </table>
         </div>
+
     </section>
-
-<!--    <section>-->
-<!--        <footer id="footerMain">-->
-<!--            <div id="mainDiv" class="container-fluid">-->
-<!--                <div id="footer">-->
-<!--                     <h1>About Us</h1>-->
-<!--                     <h4 id="moreLink">More Link</h4>-->
-<!--                     <h4 id="primaryMenu"> Primary Menu</h4>-->
-<!--                     <h4 id="contactUs">Contact Us</h4>-->
-<!--                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>-->
-<!--                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>-->
-<!--                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>-->
-<!--                </div>-->
-
-<!--                <div>-->
-<!--                    <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>-->
-<!--                    <h2 id="groStore">GroStore</h2>-->
-<!--                    <div id="socialMediaFooter">-->
-<!--                        <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">-->
-<!--                        <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">-->
-<!--                        <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </footer>-->
-<!--    </section>-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </main>
+    <section>
+        <footer id="footerMain">
+            <div id="mainDiv" class="container-fluid">
+                <div id="footer">
+                     <h1>About Us</h1>
+                     <h4 id="moreLink">More Link</h4>
+                     <h4 id="primaryMenu"> Primary Menu</h4>
+                     <h4 id="contactUs">Contact Us</h4>
+                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
+                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
+                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
+
+                    <div>
+                        <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>
+                        <h2 id="groStore">GroStore</h2>
+                        <div id="socialMediaFooter">
+                            <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
+                            <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
+                            <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
