--- a/index.html
+++ b/index.html
@@ -227,6 +227,16 @@
             left: 9%;
             width: 81vw;
         }
+
+        .h2Posi{
+            position: relative;
+            top: 27px;
+        }
+
+        .placeOrderForm{
+            position: absolute;
+            top: 118%;
+        }
     </style>
 </head>
 <body>
@@ -259,106 +269,177 @@
 
     <section id="cardSection">
         <div>
-            <div id="totalOrder" class="shadow card container-fluid cards" style="max-width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title text-center ">00</h5>
-                    <p class="card-text cardTitle">Total Order</p>
+            <div>
+                <div id="totalOrder" class="shadow card container-fluid cards" style="max-width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center ">00</h5>
+                        <p class="card-text cardTitle">Total Order</p>
+                    </div>
                 </div>
-            </div>
 
-            <div id="totalIncome" class="shadow card container-fluid cards" style="max-width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title text-center ">00.0</h5>
-                    <p class="card-text cardTitle">Total Income</p>
+                <div id="totalIncome" class="shadow card container-fluid cards" style="max-width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center ">00.0</h5>
+                        <p class="card-text cardTitle">Total Income</p>
+                    </div>
                 </div>
-            </div>
 
-            <div id="totalCustomer" class="shadow card container-fluid cards" style="max-width: 18rem;">
-                <div class="card-body">
-                        <h5 class="card-title text-center">00</h5>
-                    <p class="card-text cardTitle">Total Customers</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-fluid">
-            <div id="searchBar" class="input-group mb-3">
-                <input id="searchInputField" type="text" class="form-control" placeholder="Search Order" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
-            </div>
-        </div>
-
-        <div id="order">
-            <h4>View Orders</h4>
-        </div>
-
-        <div id="table">
-            <table class="table">
-                <thead class="table-danger">
-                    <tr>
-                        <th scope="col">Order Id</th>
-                        <th scope="col">Customer</th>
-                        <th scope="col">Item</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Discount</th>
-                        <th scope="col">Price</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                    <td>@twitter</td>
-                    <td>@twitter</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-
-    </section>
-</main>
-    <section>
-        <footer id="footerMain">
-            <div id="mainDiv" class="container-fluid">
-                <div id="footer">
-                     <h1>About Us</h1>
-                     <h4 id="moreLink">More Link</h4>
-                     <h4 id="primaryMenu"> Primary Menu</h4>
-                     <h4 id="contactUs">Contact Us</h4>
-                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>
-                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>
-                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>
-
-                    <div>
-                        <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>
-                        <h2 id="groStore">GroStore</h2>
-                        <div id="socialMediaFooter">
-                            <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">
-                            <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">
-                            <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">
-                        </div>
+                <div id="totalCustomer" class="shadow card container-fluid cards" style="max-width: 18rem;">
+                    <div class="card-body">
+                            <h5 class="card-title text-center">00</h5>
+                        <p class="card-text cardTitle">Total Customers</p>
                     </div>
                 </div>
             </div>
-        </footer>
+
+            <div class="container-fluid">
+                <div id="searchBar" class="input-group mb-3">
+                    <input id="searchInputField" type="text" class="form-control" placeholder="Search Order" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+                </div>
+            </div>
+
+            <div id="order">
+                <h4>View Orders</h4>
+            </div>
+
+            <div id="table">
+                <table class="table">
+                    <thead class="table-danger">
+                        <tr>
+                            <th scope="col">Order Id</th>
+                            <th scope="col">Customer</th>
+                            <th scope="col">Item</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Discount</th>
+                            <th scope="col">Price</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                        <td>@fat</td>
+                        <td>@fat</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td colspan="2">Larry the Bird</td>
+                        <td>@twitter</td>
+                        <td>@twitter</td>
+                        <td>@twitter</td>
+                    </tr>
+                    </tbody>
+                </table>
+                <div>
+                    <button type="button" class="btn btn-warning">Update</button>
+                    <button type="button" class="btn btn-danger">Remove</button>
+                </div>
+
+                <div>
+                    <h2 class="h2Posi">Place Your Orders</h2>
+
+                    <form class="row g-3 placeOrderForm">
+                        <div class="col-12">
+                            <label for="orderId" class="form-label">Order Id</label>
+                            <input type="text" class="form-control" id="orderId" placeholder="O001">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="customerId" class="form-label">Customer Id</label>
+                            <input type="text" class="form-control" id="customerId">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="customerName" class="form-label">Customer Name</label>
+                            <input type="text" class="form-control" id="customerName">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="inputCity" class="form-label">City</label>
+                            <input type="text" class="form-control" id="inputCity">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="telephone" class="form-label">Telephone</label>
+                            <input type="number" class="form-control" id="telephone">
+                        </div>
+
+                        <h4>Order Section</h4>
+
+                        <div class="col-md-4">
+                            <label for="ItemCode" class="form-label">Item Code</label>
+                            <select id="ItemCode" class="form-select">
+                                <option selected></option>
+                                <option>...</option>
+                            </select>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="ItemName" class="form-label">Item Name</label>
+                            <input type="text" class="form-control" id="ItemName">
+                        </div>
+
+
+                        <div class="col-md-6">
+                            <label for="qtyOnHand" class="form-label">Qty On Hand</label>
+                            <input type="text" class="form-control" id="qtyOnHand">
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="OrderQuantity" class="form-label">Order Quantity</label>
+                            <input type="text" class="form-control" id="OrderQuantity">
+                        </div>
+
+                        <div class="col-12">
+                            <label for="price" class="form-label">Order Id</label>
+                            <input type="text" class="form-control" id="price" placeholder="rs.0.00">
+                        </div>
+
+                        <div class="col-12">
+                            <button type="submit" class="btn btn-primary">Confirm Order</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
+</main>
+<!--    <section>-->
+<!--        <footer id="footerMain">-->
+<!--            <div id="mainDiv" class="container-fluid">-->
+<!--                <div id="footer">-->
+<!--                     <h1>About Us</h1>-->
+<!--                     <h4 id="moreLink">More Link</h4>-->
+<!--                     <h4 id="primaryMenu"> Primary Menu</h4>-->
+<!--                     <h4 id="contactUs">Contact Us</h4>-->
+<!--                     <h2 id="moreLinkContent" class="h2Footer">Our Customers<br>View Orders</h2>-->
+<!--                     <h2 id="primaryMenuContent" class="h2Footer">Dashboard<br>Customer<br>Store<br>Place order<br>About us</h2>-->
+<!--                     <h2 id="contactUsContent" class="h2Footer">Email : rameshlayan4@gmail.com<br>Hotline : +94 76 452 365 2</h2>-->
+
+<!--                    <div>-->
+<!--                        <h6 id="h6Footer">All Rights Reserved Ramesh Layan 2024</h6>-->
+<!--                        <h2 id="groStore">GroStore</h2>-->
+<!--                        <div id="socialMediaFooter">-->
+<!--                            <img id="facebook" src="assets/image/icons8-facebook-64.png" alt="facebook" title="facebook.com">-->
+<!--                            <img id="instagram" src="assets/image/icons8-instagram-50.png" alt="instagram" title="instagram.com">-->
+<!--                            <img id="whatsapp" src="assets/image/icons8-whatsapp-50.png" alt="whatsapp" title="whatsapp.com">-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </footer>-->
+<!--    </section>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
