--- a/customerManage.html
+++ b/customerManage.html
@@ -5,8 +5,38 @@
     <title>Customer Manage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
 </head>
 <body>
+    <section>
+        <header id="header">
+            <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded" style="background-color: #ffffff;">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid">
+                        <a class="navbar-brand" href="#">GroStore</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
+                            <div class="navbar-nav position ">
+                                <a class="nav-link active" aria-current="page" href="#">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="#">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="#">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="#">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="nav-link active" href="#">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
+            </nav>
+        </header>
+    </section>
+
+    <section>
+
+    </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
