--- a/customerManage.html
+++ b/customerManage.html
@@ -35,7 +35,12 @@
     </section>
 
     <section>
-
+        <div class="container-fluid searchBarParent">
+            <div id="searchBar" class="input-group mb-3">
+                <input id="searchInputField" type="text" class="form-control" placeholder="Search Customer" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+            </div>
+        </div>
     </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
