new , update , remove button design

--- a/customerManage.html
+++ b/customerManage.html
@@ -41,6 +41,12 @@
                 <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
             </div>
         </div>
+
+        <div>
+           <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" type="button">New</button>
+           <button class="noBorder btn-warning btn btn-outline-secondary whiteTextColor" type="button">Update</button>
+           <button class="noBorder btn-danger btn btn-outline-secondary whiteTextColor" type="button">Remove</button>
+        </div>
     </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
