design customer table

--- a/customerManage.html
+++ b/customerManage.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <header id="header">
-            <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded" style="background-color: #ffffff;">
+            <nav class="padding navbar shadow p-3 mb-5 bg-body-tertiary rounded margin" style="background-color: #ffffff;">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="#">GroStore</a>
@@ -48,6 +48,100 @@
                 <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor" type="button">Update</button>
                 <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor" type="button">Remove</button>
            </div>
+        </div>
+
+        <div class="row">
+            <div id="d1" class="row margin col-sm-4 col-xs">
+                <h4 class="viewCustomerTitle">View Customers</h4>
+            </div>
+        </div>
+
+        <div class="tableDiv customerTable">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th class="OrderTableHead " scope="col">Order Id</th>
+                    <th class="OrderTableHead" scope="col">Customer</th>
+                    <th class="OrderTableHead" scope="col">Item</th>
+                    <th class="OrderTableHead" scope="col">Quantity</th>
+                    <th class="OrderTableHead" scope="col">Discount</th>
+                    <th class="OrderTableHead" scope="col">Price</th>
+                </tr>
+                </thead>
+                <tbody id="orderTable">
+                <tr>
+                    <th class="orderTableBody" scope="row">1</th>
+                    <td class="orderTableBody">Mark</td>
+                    <td class="orderTableBody">Otto</td>
+                    <td class="orderTableBody">@mdo</td>
+                    <td class="orderTableBody">@mdo</td>
+                    <td class="orderTableBody">@mdo</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">2</th>
+                    <td class="orderTableBody">Jacob</td>
+                    <td class="orderTableBody">Thornton</td>
+                    <td class="orderTableBody">@fat</td>
+                    <td class="orderTableBody">@fat</td>
+                    <td class="orderTableBody">@fat</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">3</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">4</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">4</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">4</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">4</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr><tr>
+                    <th class="orderTableBody" scope="row">4</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr>
+
+                <tr>
+                    <th class="orderTableBody" scope="row">4</th>
+                    <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                    <td class="orderTableBody">@twitter</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
