--- a/storeManage.html
+++ b/storeManage.html
@@ -5,8 +5,126 @@
     <title>ManageStore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet/storeManageCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/customerManageCSSFile.css">
+    <link rel="stylesheet" href="assets/stylesheet/dashboardCSSFile.css">
 </head>
 <body>
+<section>
+    <header id="header">
+        <nav class="padding navbar shadow p-3 mb-5 bg-body-tertiary rounded margin" style="background-color: #ffffff;">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">GroStore</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse headerPosition" id="navbarNavAltMarkup">
+                        <div class="navbar-nav position ">
+                            <a class="nav-link active" aria-current="page" href="#">Dashboard &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="#">Customer &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="#">Store &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="#">Place Order &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a class="nav-link active" href="#">About us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                            <a href="#"><img class="profile" src="assets/image/profile.jpg" alt="profile" title="profile"></a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </nav>
+    </header>
+</section>
+
+<section>
+    <div class="container-fluid searchBarParent">
+        <div id="searchBar" class="input-group mb-3">
+            <input id="searchInputField" type="text" class="form-control" placeholder="Search Item" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary searchBtn" type="button" id="button-addon2">Search</button>
+        </div>
+    </div>
+
+    <div id="crudButton" class="relativePosition">
+        <div class="absolutePosition">
+            <button class="noBorder btn btn-outline-secondary newButton whiteTextColor" type="button">New</button>
+            <button class="noBorder btn-warning btn btn-outline-secondary updateButton whiteTextColor" type="button">Update</button>
+            <button class="noBorder btn-danger btn btn-outline-secondary removeButton whiteTextColor" type="button">Remove</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div id="d1" class="row margin col-sm-4 col-xs">
+            <h4 class="viewCustomerTitle">View Items</h4>
+        </div>
+    </div>
+
+    <div class="tableDiv customerTable">
+        <table class="table">
+            <thead>
+            <tr>
+                <th class="OrderTableHead " scope="col">Item Id</th>
+                <th class="OrderTableHead" scope="col">Item Name</th>
+                <th class="OrderTableHead" scope="col">QTY On Hand</th>
+                <th class="OrderTableHead" scope="col">Unit Price</th>
+            </tr>
+            </thead>
+            <tbody id="orderTable">
+            <tr>
+                <th class="orderTableBody" scope="row">1</th>
+                <td class="orderTableBody">Mark</td>
+                <td class="orderTableBody">Otto</td>
+                <td class="orderTableBody">@mdo</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">2</th>
+                <td class="orderTableBody">Jacob</td>
+                <td class="orderTableBody">Thornton</td>
+                <td class="orderTableBody">@fat</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">3</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr><tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+
+            <tr>
+                <th class="orderTableBody" scope="row">4</th>
+                <td class="orderTableBody" colspan="2">Larry the Bird</td>
+                <td class="orderTableBody">@twitter</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
