--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <section >
     <header id="header">
-        <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded" style="background-color: #ffffff;">
+        <nav class="navbar shadow p-3 mb-5 bg-body-tertiary rounded padding" style="background-color: #ffffff;">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">GroStore</a>
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="tableDiv">
+    <div class="tableDiv orderDetailTable">
         <table class="table">
             <thead>
             <tr>
