change css class name

--- a/storeManage.html
+++ b/storeManage.html
@@ -52,8 +52,8 @@
     </div>
 
     <div class="row">
-        <div id="d1" class="row margin col-sm-4 col-xs">
-            <h4 class="viewCustomerTitle">View Items</h4>
+        <div class="row margin col-sm-4 col-xs">
+            <h4 class="viewStoreTableTitle">View Items</h4>
         </div>
     </div>
 
