--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="row position viewWidth">
-        <div id="d1" class="row margin col-sm-4 col-xs OrderTitle">
+        <div class="row margin col-sm-4 col-xs OrderTitle">
             <h4 class="titleSmallSize">View Order Detail</h4>
         </div>
     </div>
