apply css in table and table title

--- a/storeManage.html
+++ b/storeManage.html
@@ -51,13 +51,13 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="row margin col-sm-4 col-xs">
+    <div class="row tableTitleParentDiv">
+        <div class="row margin col-sm-4 col-xs tableTitleSubDiv">
             <h4 class="viewStoreTableTitle">View Items</h4>
         </div>
     </div>
 
-    <div class="tableDiv customerTable">
+    <div class="tableDiv storeTable">
         <table class="table">
             <thead>
             <tr>
