billBtn apply css

--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -125,7 +125,7 @@
                     <h4 class="margin-bottom">Balance</h4>
                 </div>
 
-                <div id="billBtn">
+                <div id="billBtn" class="col-12">
                     <button id="cancelBtn" type="submit" class="btn btn-primary btnSize"> Cancel</button>
                     <button id="purchaseBtn" type="submit" class="btn btn-primary inputFieldMargin btnSize"> Purchase</button>
                 </div>
