design price list css

--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -115,8 +115,44 @@
                     <h5>Billing Your Order</h5>
                 </div>
 
-                <div class="col-6">
+                <div class=" itemsDetails">
+                    <div class="col-6 ">
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                        <p>Item Name</p>
+                    </div>
 
+                    <div id="itemPriceListMainDiv" class="col-6">
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                        <p class="prices">0.00</p>
+                    </div>
                 </div>
 
                 <div class="col-6 billPrices">
