bill prices design

--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -155,10 +155,18 @@
                     </div>
                 </div>
 
-                <div class="col-6 billPrices">
-                    <h4 class="margin-bottom">Sub Total</h4>
-                    <h4 class="margin-bottom">Discount</h4>
-                    <h4 class="margin-bottom">Balance</h4>
+                <div id="pricesMainDiv" class="col-12">
+                    <div class="billPricesLabel col-6">
+                        <h4 class="margin-bottom">Sub Total</h4>
+                        <h4 class="margin-bottom">Discount</h4>
+                        <h4 class="margin-bottom">Balance</h4>
+                    </div>
+
+                    <div class="billPrices col-6 pricesContentPosition">
+                        <h5 class="prices margin-bottom">0.00</h5>
+                        <h5 class="prices margin-bottom">0.00</h5>
+                        <h5 class="prices">0.00</h5>
+                    </div>
                 </div>
 
                 <div id="billBtn" class="col-12">
