--- a/placeOrderManage.html
+++ b/placeOrderManage.html
@@ -40,7 +40,7 @@
     <section>
         <div class="col-6 placeOrderForm">
             <div class="titleOrder">
-                <h3>Place Your Orders</h3>
+                <h3 class="purpleTextColor">Place Your Orders</h3>
             </div>
             <form class="row g-3 ">
                 <div class="col-12 margin-bottom">
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="margin-bottom">
-                    <h4>Item Section</h4>
+                    <h4 class="purpleTextColor">Item Section</h4>
                     <div id="line1"></div>
                 </div>
 
